; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-stmp378x/extr_stmp378x.c_stmp378x_ack_irq.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/arm/mach-stmp378x/extr_stmp378x.c_stmp378x_ack_irq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@REGS_ICOLL_BASE = common dso_local global i64 0, align 8
@HW_ICOLL_VECTOR = common dso_local global i64 0, align 8
@HW_ICOLL_LEVELACK = common dso_local global i64 0, align 8
@HW_ICOLL_STAT = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @stmp378x_ack_irq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @stmp378x_ack_irq(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i64, i64* @REGS_ICOLL_BASE, align 8
  %4 = load i64, i64* @HW_ICOLL_VECTOR, align 8
  %5 = add nsw i64 %3, %4
  %6 = call i32 @__raw_writel(i32 0, i64 %5)
  %7 = load i64, i64* @REGS_ICOLL_BASE, align 8
  %8 = load i64, i64* @HW_ICOLL_LEVELACK, align 8
  %9 = add nsw i64 %7, %8
  %10 = call i32 @__raw_writel(i32 1, i64 %9)
  %11 = load i64, i64* @REGS_ICOLL_BASE, align 8
  %12 = load i64, i64* @HW_ICOLL_STAT, align 8
  %13 = add nsw i64 %11, %12
  %14 = call i32 @__raw_readl(i64 %13)
  ret void
}

declare dso_local i32 @__raw_writel(i32, i64) #1

declare dso_local i32 @__raw_readl(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
